--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_API_KEY="AIzaSyDqjLOFAGakvR1U5Xy-nWGAF4CKrUtpo0o"
-REACT_APP_AUTH_DOMAIN="blog-react-1ce7a.firebaseapp.com"
-REACT_APP_PROJECT_ID="blog-react-1ce7a"
-REACT_APP_STORAGE_BUCKET="blog-react-1ce7a.appspot.com"
-REACT_APP_MESSAGING_SENDER_ID="612831141663"
-REACT_APP_APP_ID="1:612831141663:web:d27dcd9fbbb996dc4eda2a"
-REACT_APP_MEASUREMENT_ID="G-R08H6L3ZV7"
+REACT_APP_API_KEY="AIzaSyDORVNnR4lrUCHVK4ijEShmN3TvTHtgQlE"
+REACT_APP_AUTH_DOMAIN="fir-training-c0b22.firebaseapp.com"
+REACT_APP_PROJECT_ID="fir-training-c0b22"
+REACT_APP_STORAGE_BUCKET="fir-training-c0b22.appspot.com"
+REACT_APP_MESSAGING_SENDER_ID="446324864278"
+REACT_APP_APP_ID="1:446324864278:web:6ff19a4d58e1fc8b5e8c37"
+REACT_APP_MEASUREMENT_ID="G-7QPQBF6MGV"
